--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: magic_button
+name: flutter_magic_button
 description: "A customizable Flutter button widget that displays an animated gradient border."
 version: 1.0.0
 homepage: https://vhdrjb.website/
